--- a/core/templates/codenova/project-details.html
+++ b/core/templates/codenova/project-details.html
@@ -143,12 +143,13 @@
                         <div class="row md-marg">
                             <div class="col-md-6">
                                 <div class="img sm-mb30">
-                                    <img src="assets/imgs/works/project/2.png" alt="">
+                                    {% comment %} <img src="assets/imgs/works/project/2.png" alt=""> {% endcomment %}
+                                    <img src="{% static 'imgs/works/project/2.png'%}" alt="">
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="img">
-                                    <img src="assets/imgs/works/project/3.png" alt="">
+                                    <img src="{% static 'imgs/works/project/3.png'%}" alt="">
                                 </div>
                             </div>
                         </div>
